--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 			// ==populate==
 			model.obstacles.push({x: 3, y: 3, w: 10, h: 10});
 			model.obstacles.push({x: 20, y: 10, w: 20, h: 10});
-			model.obstacles.push({x: 50, y: 2, w: 8, h: 20});
+			model.obstacles.push({x: 50, y: 2, w: 8, h: 12});
 			//build the position hash that will never change
 			var staticPosHash = {};
 			for (var i in model.obstacles) {
@@ -184,7 +184,7 @@
 				//move sick
 				for (i in model.sick) {
 					sick = model.sick[i];
-					moveRandom(sick);
+					moveTowards(sick, model.healthy);
 					wrap(sick);
 					posHash = model.getPosHash(sick);
 					if (posMap[posHash]) { //collision
@@ -212,6 +212,40 @@
 						
 					} else {
 						posMap[posHash] = healthy;
+					}
+				}
+			}
+			function moveTowards(actor, targets) {
+				actor.oldX = actor.x;
+				actor.oldY = actor.y;
+				//find closest target
+				var closestTarget = null;
+				var closestDist = Infinity;
+				for (var i in targets) {
+					var d = dist(targets[i], actor);
+					if (d < closestDist) {
+						closestDist = d;
+						closestTarget = targets[i];
+					}
+				}
+				// if no target, move random
+				if (closestTarget === null) {
+					moveRandom(actor);
+					return;
+				}
+				//move towards target
+				if (actor.x - closestTarget.x !== 0) {
+					if (actor.x - closestTarget.x < 0) {
+						actor.x++;
+					} else {
+						actor.x--;
+					}
+				}
+				if (actor.y - closestTarget.y !== 0) {
+					if (actor.y - closestTarget.y < 0) {
+						actor.y++;
+					} else {
+						actor.y--;
 					}
 				}
 			}
